--- a/CryptoTrack/CryptoTrack.csproj
+++ b/CryptoTrack/CryptoTrack.csproj
@@ -143,18 +143,25 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Helpers.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\CryptoTrackDB.mdf" />
+    <Content Include="App_Data\CryptoTrackDB_log.ldf">
+      <DependentUpon>CryptoTrackDB.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap-darkly.css" />
     <Content Include="Content\bootstrap-darkly.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\mycss.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -195,6 +202,7 @@
     <Content Include="Views\User\Create.cshtml" />
     <Content Include="Views\User\Update.cshtml" />
     <Content Include="Views\User\Delete.cshtml" />
+    <Content Include="Views\Login\Login.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
