Login - added record to DB and created default layout for logged user

--- a/CryptoTrack/CryptoTrack.csproj
+++ b/CryptoTrack/CryptoTrack.csproj
@@ -203,6 +203,7 @@
     <Content Include="Views\User\Update.cshtml" />
     <Content Include="Views\User\Delete.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
